k8s/apps/leachnet/ln-home/zigbee2mqtt/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zigbee2mqtt
spec:
  selector:
    matchLabels:
      app: zigbee2mqtt
  replicas: 1
  serviceName: "zigbee2mqtt"
  template:
    metadata:
      labels:
        app: zigbee2mqtt
    spec:
      containers:
        - name: z2m
          image: ghcr.io/koenkk/zigbee2mqtt:1.25
          imagePullPolicy: Always
          ports:
          - containerPort: 8080
            protocol: TCP
            name: http
          resources:
            requests:
              memory: "50Mi"
              cpu: "50m"
              duck.moe/radio-zigbee: "1"
            limits:
              memory: "200Mi"
              cpu: "1"
              duck.moe/radio-zigbee: "1"
          securityContext:
            privileged: true
            procMount: Default
          volumeMounts:
          - name: data
            mountPath: /app/data
          - name: config
            mountPath: /app/data/configuration.yaml
            readOnly: true
            subPath: configuration.yaml
          - name: usb-zigbee
            mountPath: /dev/ttyUSB0
          - name: secrets
            mountPath: /app/data/secret.yaml
            readOnly: true
            subPath: secret.yaml
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
      volumes:
      - name: config
        configMap:
          name: zigbee2mqtt-config
      - name: usb-zigbee
        hostPath:
          path: /dev/ttyUSB0
          type: CharDevice
      - name: secrets
        secret:
          secretName: zigbee2mqtt
          optional: false
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
        - ReadWriteOnce
      storageClassName: manual
      resources:
        requests:
          storage: 50Mi
