k8s/apps/leachnet/ln-home/zigbee2mqtt/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt
spec:
  ports:
  - name: http
    port: 8080
    targetPort: http
  selector:
    app: zigbee2mqtt
